2007-10-27  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el: Now detect if text foreground and background colors are
	equals and replace the foreground color by another color, so the text
	becomes visible.  Doc fix.
	(ps-print-version): New version 7.3.
	(ps-default-fg, ps-default-bg): Docstring fix.
	(ps-fg-list, ps-fg-validate-p): New options.
	(ps-foreground-list): New var.
	(ps-generate-header-line): Replace fboundp by functionp.
	(ps-setup, ps-begin-job, ps-plot-region): Fix code.

2007-10-26  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* printing.el: Pacify byte compiler, that is, no compiler warnings.
	Move (again) some variable definitions before use, define some fun
	aliases, no code change.
	(pr-version): New version 6.9.2.
	(pr-path-style, pr-auto-region, pr-menu-char-height)
	(pr-menu-char-width, pr-menu-lock, pr-ps-printer-alist)
	(pr-txt-printer-alist, pr-ps-utility-alist): Options declaration
	via (defvar VAR).
	(pr-menu-lookup, pr-menu-lock, pr-menu-alist, pr-even-or-odd-pages)
	(pr-menu-get-item, pr-menu-set-item-name, pr-menu-set-utility-title)
	(pr-menu-set-ps-title, pr-menu-set-txt-title, pr-region-active-p)
	(pr-do-update-menus, pr-update-mode-line, pr-f-read-string)
	(pr-f-set-keymap-parents, pr-keep-region-active): Fun aliases.
	(pr-menu-print-item, pr-ps-printer-menu-modified)
	(pr-txt-printer-menu-modified, pr-ps-utility-menu-modified)
	(pr-even-or-odd-alist): Vars definition moved.

2007-10-26  Dan Nicolaescu  <dann@ics.uci.edu>

	* emulation/pc-select.el (next-line-mark, next-line-nomark)
	(previous-line-mark, previous-line-nomark): Wrap with-no-warnings
	around uses of previous-line and next-line.

	* diff.el (diff-old-file, diff-new-file, diff-extra-args): New
	defvars.

	* textmodes/css-mode.el (comment-continue):
	* net/browse-url.el (url-handler-regexp):
	* progmodes/idlw-help.el (idlwave-system-routines): Pacify
	byte-compiler.

	* textmodes/fill.el (fill-nobreak-p): Replace obsolete alias